:arrow_up: Update JDA dependency to version 6.0.0-rc.1 (and applied migrations changes)